--- a/public/features.html
+++ b/public/features.html
@@ -61,13 +61,19 @@
 	<section id="features">
 		<h1>Features of the Amberbio app</h1>
 		<div class="column">
-			<h2>Mobile data analysis</h2>
-			The Amberbio app performs all calculations and visualization on the mobile device. The data is always available and can be visualized and analyzed in real time during meetings for example.
+			<h2>Mobile data analysis</h2> 
+			The Amberbio app performs all calculations and
+			visualizations on the mobile device. The data is always available and can be
+			visualized and analyzed in real time during meetings for example.
 		</div>
 
 		<div class="column">
-			<h2>Types of data</h2>
-			Data sets consist of samples, molecules, and measurements for each molecule-sample pair. Missing values are allowed. Various types of data can be analyzed in the app such as mRNA gene expression, protein abundances, or microRNA abundance. Even data sets of a non-biological origin can be used.
+			<h2>Types of data</h2> 
+			Data sets consist of samples, molecules, and
+			measurements for each molecule-sample pair. Missing values are
+			allowed. Various types of data can be analyzed in the app such as mRNA gene
+			expression, protein abundances, or microRNA abundance. Even data sets of a
+			non-biological origin can be used.
 		</div>
 		
 		<div class="column">
