--- a/public/manual.html
+++ b/public/manual.html
@@ -574,7 +574,7 @@ user.
   <section-manual id="svm">
     <h1><a href="#table-of-contents">Support vector machine classification</a></h1>
     <p>
-      The support vector machine(SVM) classification uses the software library LIBSVM: "Chih-Chung
+      The support vector machine (SVM) classification uses the software library LIBSVM: "Chih-Chung
       Chang and Chih-Jen Lin, LIBSVM : a library for support vector machines. ACM Transactions on
       Intelligent Systems and Technology, 2:27:1--27:27, 2011". The LIBSVM software is available at
       http://www.csie.ntu.edu.tw/~cjlin/libsvm. The Amberbio app uses the LIBSVM library to train
@@ -637,12 +637,12 @@ user.
     </p>
 
     <p>
-      For the binary classifier(two levels), a decision value is calculated. Samples with positive
-      decision values are classified in one level, and those with negative decision values in the
+      For the binary classifier (two levels), a decision value is calculated. Samples with positive
+      decision values are classified in one level and those with negative decision values in the
       other level. Using a variable threshold instead of a fixed zero threshold, a whole curve of
       classifiers is obtained. Plotting the true positive rate versus the false positive rate for
-      variable thresholds lead to the receiver operating characteristic(ROC) curve. The area under
-      the curve is a measure for the success of the classifier. Good classifiers have areas close to
+      variable thresholds leads to the receiver operating characteristic (ROC) curve. The area under
+      the curve is a measure of the success of the classifier. Good classifiers have areas close to
       1, whereas bad classifiers have areas close to 0.5.
     </p>
 
@@ -655,7 +655,7 @@ user.
     </p>
 
     <p>
-      The kernels are the linear kernel and the radial basis function(RBF) kernel of Gaussian
+      The kernels are the linear kernel and the radial basis function (RBF) kernel of Gaussian
       functions. The parameter C is the coefficient of the error term in the optimizing
       function. The parameter gamma is the scale parameter in the exponent of the Gaussian function.
       A proper explanation can be found in any article or book about support vector machines. The
@@ -668,7 +668,7 @@ user.
     </p>
 
     <p>
-      Only molecules without missing values in the training and test set are used for the SVM.
+      Only molecules without missing values in the training and test sets are used for the SVM.
     </p>
   </section-manual>
   
