--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Nosy Bee provides web surveys, statistical analysis och result reports.">
+    <meta name="description" content="Amberbio app for data analysis.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Amberbio</title>
     <link rel="icon" type="image/png" href="/favicon.png" />
