--- a/public/index.html
+++ b/public/index.html
@@ -78,9 +78,8 @@
 
       <section>
 	<h1>Price</h1>
-	<p class="tagline">The app is a paid app with no extra costs and no adds. Future updates are free.</p>
-	<p class="tagline">The purchased app can be freely installed on other devices with the same Apple ID.</p>
-	<p class="tagline">The current price is €74.99, $74.99 or a similar amount in other currencies.</p>
+	<p class="tagline">The app is currently a paid app. It will very soon become a free app with in-app purchases.</p>
+	<p class="tagline">Details follow when the next version of the app is released.</p>
       </section>
 
       <section id="privacy">
